--- a/css/resume.css
+++ b/css/resume.css
@@ -189,4 +189,10 @@ a:hover, a:focus, a:active {
 .dev-icons {
   font-size: 2.3rem;
 }
+
+h1 {
+  font-size: 5rem;
+  line-height: 4.5rem;
+  text-shadow: 1px 2px 3px #de520f;
+}
 }
