--- a/css/resume.css
+++ b/css/resume.css
@@ -185,14 +185,14 @@ a:hover, a:focus, a:active {
   color: #000000;
 }
 
-@media (min-width: 375px){
+@media (max-width: 375px){
 .dev-icons {
-  font-size: 2.3rem;
+  font-size: 2.1rem;
 }
 
 h1 {
-  font-size: 5rem;
-  line-height: 4.5rem;
+  font-size: 4rem;
+  line-height: 3.5rem;
   text-shadow: 1px 2px 3px #de520f;
 }
 }
